--- a/todo-gateway/build.gradle
+++ b/todo-gateway/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
