--- a/todo-main/build.gradle
+++ b/todo-main/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
-
 }
 
 group = 'io.seoLeir'
@@ -29,10 +28,9 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     compileOnly 'org.projectlombok:lombok'
 
-    implementation 'io.seoLeir.micro:todo-entity:1.0.0'
+    implementation 'io.seoLeir.micro:todo-entity'
 
     implementation 'org.postgresql:postgresql'
 
