--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,6 @@ includeBuild('todo-config')
 includeBuild('todo-gateway')
 includeBuild('todo-entity')
 includeBuild('todo-main')
+includeBuild('todo-utils')
+includeBuild('todo-users')
 
