--- a/todo-main/src/main/resources/application.yaml
+++ b/todo-main/src/main/resources/application.yaml
@@ -2,7 +2,9 @@ spring:
   application:
     name: todo-main
   profiles:
-    active: main
+    active: logging
   config:
     import: configserver:http://localhost:8888
-
+logging:
+  level:
+    org.hibernate.type.descriptor.sql: trace
